fix toggle password visibility

--- a/style.css
+++ b/style.css
@@ -11,41 +11,49 @@
     text-decoration: underline;
     font-weight: bold;
     margin-bottom: 20px;
-    font-family: 'poppins';
+    font-family: 'poppins', sans-serif;
   }
   
   .form-group {
+    position: relative;
     margin-bottom: 15px;
+  }
+
+  .form-group .fa-eye {
+    position: absolute;
+    top: 29px;
+    right: -10px;
+    color: #7a797e;
+    font-size: 20px;
+    cursor: pointer;
   }
   
   label {
     font-weight: bold;
-    font-family: 'roboto';
+    font-family: 'roboto', sans-serif;
   }
   
   .password-input {
     width: 100%;
     padding: 10px;
+    font-family: 'poppins', sans-serif;
     font-size: 16px;
     outline: none;
     border-radius: 4px;
     border: 1px solid #ccc;
   }
 
-
-
-  
   .msg {
     margin-bottom: 15px;
     font-size: 14px;
-    font-family: 'poppins';
+    font-family: 'poppins', sans-serif;
   }
   
   .submit-button {
     padding: 10px 20px;
     font-size: 16px;
     font-weight: bold;
-    font-family: 'poppins';
+    font-family: 'poppins', sans-serif;
     color: #fff;
     background-color: #1877f2;
     border: none;
